# app_meshed

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app_meshed/: __init__.py  cli.py
app_meshed/api/: main.py  startup.py
app_meshed/services/: dag_service.py  function_registry.py  schema_service.py  stream_service.py
app_meshed/stores/: root_store.py
app_meshed/utils/: example_functions.py
examples/: __init__.py  dol_browser_example.py  hello_world_dag.py  ju_schema_example.py  stream_slicing_example.py
frontend/: README.md  package-lock.json  package.json
frontend/e2e/: app-integration.spec.ts  mesh-maker.spec.ts  store-browser.spec.ts  stream-viewer.spec.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: MeshMaker.tsx  StoreBrowser.tsx  StreamViewer.tsx
frontend/src/types/: index.ts
tests/: __init__.py  test_dag_service.py  test_function_registry.py  test_schema_service.py
