[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app_meshed"
version = "0.0.1"
description = "Http services and frontend for meshed operations"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = []
dependencies = [
    "meshed>=0.1.0",
    "dol>=0.2.0",
    "i2>=0.1.0",
    "creek>=0.1.0",
    "ju>=0.1.0",
    "qh>=0.0.4",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
]

[project.license]
text = "mit"

[project.urls]
Homepage = "https://github.com/i2mint/app_meshed"
Repository = "https://github.com/i2mint/app_meshed"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0"]
docs = ["sphinx>=6.0", "sphinx-rtd-theme>=1.0"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = ["D100"]
ignore = ["D203", "E501", "B905"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["D"]
"**/examples/*" = ["D"]
"**/scrap/*" = ["D"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
